@@ -50,17 +50,17 @@ src/gnome-cmd-user-actions.cc
 src/gnome-cmd-xfer-progress-win.cc
 src/gnome-cmd-xfer.cc
 src/imageloader.cc
-src/libgviewer/cp437.cc
-src/libgviewer/datapresentation.cc
-src/libgviewer/fileops.cc
-src/libgviewer/image-render.cc
-src/libgviewer/inputmodes.cc
-src/libgviewer/scroll-box.cc
-src/libgviewer/search-dlg.cc
-src/libgviewer/search-progress-dlg.cc
-src/libgviewer/text-render.cc
-src/libgviewer/viewer-widget.cc
-src/libgviewer/viewer-window.cc
+src/intviewer/cp437.cc
+src/intviewer/datapresentation.cc
+src/intviewer/fileops.cc
+src/intviewer/image-render.cc
+src/intviewer/inputmodes.cc
+src/intviewer/scroll-box.cc
+src/intviewer/search-dlg.cc
+src/intviewer/search-progress-dlg.cc
+src/intviewer/text-render.cc
+src/intviewer/viewer-widget.cc
+src/intviewer/viewer-window.cc
 src/main.cc
 src/owner.cc
 src/plugin_manager.cc
