@@ -1,3 +1,8 @@
+2008-01-03  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/libgviewer:
+	Rename libgviewer -> intviewer
+
 2008-01-02  koos  <kjniesink@yahoo.co.uk>
 
 	* src/gnome-cmd-xfer.cc:
